@@ -2141,7 +2141,7 @@ dump_message_count = 20
 
 dump_order  = header,hiscore,stats,misc,notes,inventory,
 dump_order += skills,spells,overview,mutations,messages,screenshot,
-dump_order += monlist,kills,action_counts
+dump_order += monlist,kills,skill_gains,action_counts
         (Ordered list option)
         Controls the order of sections in the dump.
 
@@ -2157,7 +2157,7 @@ dump_order += monlist,kills,action_counts
         which happens when you die, quit or win (or in ordinary dumps
         while in wizard mode). The "vaults" section is enabled by default
         in trunk builds of Crawl (not releases or pre-release betas),
-        appearing between "kills" and "action_counts".
+        appearing between "kills" and "skill_gains".
 
 dump_book_spells = true
         By default all randart spellbooks in inventory will have all their
